# converter

./: .gitignore  CMakeLists.txt  ConverterAppArchitecture.mdj  ConverterConfig.h.in  README.md  main.cpp
inc/common/: common.h
src/: ConverterApp.cpp  ConverterApp.h  ConverterAppSimple.cpp  ConverterAppSimple.h  ConverterHelper.cpp  ConverterHelper.h  ConverterLame.cpp  ConverterLame.h  ConverterTask.cpp  ConverterTask.h  IConverter.h  main.cpp
src/common/: Log.cpp  Log.h  Utils.cpp  Utils.h
src/converter/: ConverterHelper.cpp  ConverterHelper.h  ConverterLame.cpp  ConverterLame.h  ConverterTask.h  IConverter.h
src/task-runner/: CMakeLists.txt  ITaskListener.h  TaskBase.cpp  TaskBase.h  TaskList.cpp  TaskList.h  TaskRunner.cpp  TaskRunner.h  TaskThread.cpp  TaskThread.h
tests/: CMakeLists.txt
tests/common/: Helpers.cpp  Helpers.h
tests/integration/: CMakeLists.txt  ConverterAppSimpleTest.cpp  ConverterAppTest.cpp  ConverterLameTest.cpp
tests/unit/: CMakeLists.txt  ConverterTaskTest.cpp  LogTest.cpp  MockIConverter.h  MockTaskBaseListener.h  TaskBaseTest.cpp  TaskListTest.cpp  TaskRunnerTest.cpp  TaskThreadTest.cpp
